[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scripts/ai.gd" type="Script" id=1]
[ext_resource path="res://Sprites/CHARACTER_SPRITES/Green/Gunner_Green_Idle.png" type="Texture" id=2]
[ext_resource path="res://Sprites/CHARACTER_SPRITES/Green/Gunner_Green_Death.png" type="Texture" id=3]
[ext_resource path="res://Sprites/CHARACTER_SPRITES/Green/Gunner_Green_Run.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 400.0

[sub_resource type="CircleShape2D" id=2]
radius = 150.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2.51396, 4.98306 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": false,
"name": "die",
"speed": 10.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[node name="GContainer" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Ears" type="Area2D" parent="."]
visible = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ears"]
shape = SubResource( 1 )

[node name="Proximity" type="Area2D" parent="."]
visible = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Proximity"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -1 )
scale = Vector2( 3.2, 3.2 )
shape = SubResource( 3 )

[node name="Radar" type="RayCast2D" parent="."]
position = Vector2( 1, 0 )
enabled = true
cast_to = Vector2( 400, 0 )
collision_mask = 2147483649

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 23 )
animation = "idle"

[node name="Label" type="Label" parent="."]
margin_left = -9.93935
margin_top = -41.8787
margin_right = 10.0607
margin_bottom = -20.8787
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
text = "green"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Ears" to="." method="_on_Ears_body_entered"]
[connection signal="body_exited" from="Ears" to="." method="_on_Ears_body_exited"]
[connection signal="body_entered" from="Proximity" to="." method="_on_Proximity_body_entered"]
[connection signal="body_exited" from="Proximity" to="." method="_on_Proximity_body_exited"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
